Refactored, but not tested yet

--- a/firmware/data/index.html
+++ b/firmware/data/index.html
@@ -32,8 +32,16 @@
                 <td><input type="textbox" name="mqtt_id" value="{mqttClientId}"></td>
             </tr>
             <tr>
-                <td>Mqtt topic:</td>
-                <td><input type="textbox" name="mqtt_topic" value="{mqttClientTopic}"></td>
+                <td>Mqtt base topic:</td>
+                <td><input type="textbox" name="mqtt_base_topic" value="{mqttBaseTopic}"></td>
+            </tr>
+            <tr>
+                <td>Mqtt avaibility topic:</td>
+                <td><input type="textbox" name="mqtt_avaibility_topic" value="{mqttAvaibilityTopic}"></td>
+            </tr>
+            <tr>
+                <td>Mqtt subscribe topic:</td>
+                <td><input type="textbox" name="mqtt_subscribe_topic" value="{mqttSubscribeTopic}"></td>
             </tr>
         </table>
         <input type="submit" value="Update">
